--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.chaewon.iwantyoucook">
+    package="com.moco.wonchu.iwantyoucook">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_kitchen"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyATdx0chtAB8IogJ7fXQ_DYMekYLNhgy2A" />
+
+        <activity android:name="com.moco.wonchu.iwantyoucook.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.moco.wonchu.iwantyoucook.RecipeActivity"/>
+        <activity android:name="com.moco.wonchu.iwantyoucook.CookActivity"/>
+        <activity android:name="com.moco.wonchu.iwantyoucook.MarketActivity"/>
+        <activity android:name="com.moco.wonchu.iwantyoucook.ProfileActivity"/>
     </application>
 
 </manifest>
