--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,11 @@
     package="com.moco.wonchu.iwantyoucook">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_kitchen"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -14,7 +16,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyATdx0chtAB8IogJ7fXQ_DYMekYLNhgy2A" />
+            android:value="AIzaSyCncD34EPkAX5wYRG350ofeWwu7ouw_Xd4" />
 
         <activity android:name="com.moco.wonchu.iwantyoucook.MainActivity">
             <intent-filter>
@@ -29,6 +31,7 @@
         <activity android:name="com.moco.wonchu.iwantyoucook.MarketActivity"/>
         <activity android:name="com.moco.wonchu.iwantyoucook.ProfileActivity"/>
         <activity android:name=".BookActivity"/>
+        <activity android:name=".ListActivity"/>
     </application>
 
 </manifest>
