--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.moco.wonchu.iwantyoucook">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -8,7 +9,7 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@drawable/ic_kitchen"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -16,22 +17,16 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCncD34EPkAX5wYRG350ofeWwu7ouw_Xd4" />
+            android:value="AIzaSyBLqQfLsEmAWIWYdKvrLXDDO0E-M9HMb4A"
+            />
 
-        <activity android:name="com.moco.wonchu.iwantyoucook.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.moco.wonchu.iwantyoucook.RecipeActivity"/>
-        <activity android:name="com.moco.wonchu.iwantyoucook.CookActivity"/>
-        <activity android:name="com.moco.wonchu.iwantyoucook.MarketActivity"/>
-        <activity android:name="com.moco.wonchu.iwantyoucook.ProfileActivity"/>
-        <activity android:name=".BookActivity"/>
-        <activity android:name=".ListActivity"/>
     </application>
 
 </manifest>
