omitted file: RegisterActivity made by Jinju

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".WelcomeActivity"></activity>
+        <activity android:name=".RecipeListActivity"/>
+        <activity android:name=".RecipeActivity"/>
     </application>
 
 </manifest>
