--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".WelcomeActivity"></activity>
         <activity android:name=".RecipeListActivity"/>
         <activity android:name=".RecipeActivity"/>
+        <activity android:name=".SearchResult"/>
     </application>
 
 </manifest>
